# filesaver

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  File Saver Diagram  Makefile  README.md  conanfile.txt  dependencies.txt  docker-compose.yml  doxygen.dox  main.cpp  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json
FileSaver/: .gitignore  conan.prof  conan_x86.prof  conanfile.txt
cmake/: CompilerWarnings.cmake  Conan.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
design/: AppIcon.sketch
docs/: _aggregation_worker_8cpp.html  _aggregation_worker_8cpp_source.html  _aggregation_worker_8h.html  _aggregation_worker_8h_source.html  _background_queue_worker_8h.html  _background_queue_worker_8h.js  _background_queue_worker_8h_source.html  _background_worker_8h.html  _background_worker_8h_source.html  _command_line_app_8cpp.html  _command_line_app_8cpp_source.html  _command_line_app_8h.html  _command_line_app_8h.js  _command_line_app_8h_source.html  _default_stats_provider_8cpp.html  _default_stats_provider_8cpp_source.html  _default_stats_provider_8h.html  _default_stats_provider_8h_source.html  _file_category_service_8cpp.html  _file_category_service_8cpp_source.html  _file_category_service_8h.html  _file_category_service_8h_source.html  _file_category_worker_8cpp.html  _file_category_worker_8cpp_source.html  _file_category_worker_8h.html  _file_category_worker_8h_source.html  _file_entry_8cpp.html  _file_entry_8cpp_source.html  _file_entry_8h.html  _file_entry_8h.js  _file_entry_8h_source.html  _file_saver_8cpp.html  _file_saver_8cpp.js  _file_saver_8cpp_source.html  _file_saver_8h.html  _file_saver_8h.js  _file_saver_8h_source.html  _file_saver_factory_8cpp.html  _file_saver_factory_8cpp_source.html  _file_saver_factory_8h.html  (+423 more)
filesaver-gui/: package-lock.json  package.json
gui/: CMakeLists.txt  main.cpp
gui/widgets/: MainWindow.cpp  MainWindow.h
scripts/: check-outdated-dependencies.ts
services/: FileSaver.cpp  FileSaver.h  FileSizeService.cpp  WorkerManager.h  (+2 more)
src/: CMakeLists.txt  FileSaver.cpp  FileSaver.h  main.cpp
src/command-line/: CommandLineApp.cpp  CommandLineApp.h
src/command-line/logger/: StatusPrinter.cpp  StatusPrinter.h
src/data/: WorkQueue.cpp  WorkQueue.h
src/filesaver/: CMakeLists.txt  main.cpp
src/filesaver/command-line/logger/: StatusDescr.cpp  StatusPrinter.cpp
src/filesaver/command_line/: CommandLineApp.cpp  CommandLineApp.h  CommandLineOptions.cpp  CommandLineOptions.h
src/filesaver/command_line/logger/: StatusDescr.cpp  StatusDescr.h  StatusPrinter.cpp  StatusPrinter.h
src/lfilesaver/: CMakeLists.txt  FileSaver.cpp  FileSaver.h
src/lfilesaver/data/: WorkQueue.h
src/lfilesaver/factory/: FileSaverFactory.cpp  FileSaverFactory.h
src/lfilesaver/models/: FileEntry.cpp  FileEntry.h  FileSizePair.cpp  FileSizePair.h  Settings.h
src/lfilesaver/server/: Server.cpp  Server.h
src/lfilesaver/server/util/: DefaultStatsProvider.cpp  DefaultStatsProvider.h  Stats.cpp  Stats.h  StatsProvider.h
src/lfilesaver/services/: BackgroundQueueWorker.h  BackgroundWorker.h
src/lfilesaver/services/category/: FileCategoryService.cpp  FileCategoryService.h  FileCategoryWorker.cpp  FileCategoryWorker.h  LevelDbFileCategoryStore.cpp  LevelDbFileCategoryStore.h  PathMatcher.cpp  PathMatcher.h
src/lfilesaver/services/filesize/: AggregationWorker.cpp  AggregationWorker.h  FileSizeService.cpp  FileSizeService.h  InMemoryFileEntryStore.cpp  InMemoryFileEntryStore.h  InMemoryFileSizeService.cpp  InMemoryFileSizeService.h
src/lfilesaver/services/fileutils/: CompressionError.h  CompressionService.cpp  CompressionService.h
src/lfilesaver/services/paths/: RootPathProvider.cpp  RootPathProvider.h
src/lfilesaver/services/settings/: SettingsService.cpp  SettingsService.h
src/lfilesaver/services/stats/: InMemoryMetricsReporter.cpp  InMemoryMetricsReporter.h  StatsManager.cpp  StatsManager.h  ThroughputTracker.cpp  ThroughputTracker.h
src/lfilesaver/services/storage/: LevelDbFactory.cpp  LevelDbFactory.h  LevelDbStorageService.cpp  LevelDbStorageService.h  StorageService.h  StorageWorker.cpp  StorageWorker.h
src/lfilesaver/simple_timer/: SimpleTimer.cpp  SimpleTimer.h
src/lfilesaver/statsd/: LICENSE  StatsdClient.cpp  StatsdClient.h  UDPSender.cpp  UDPSender.h
src/lfilesaver/utils/: Utils.cpp  Utils.h
src/lfilesaver/workers/: Worker.cpp  Worker.h  WorkerManager.cpp  WorkerManager.h
src/models/: FileEntry.cpp  FileEntry.h  FileSizePair.cpp  FileSizePair.h  Settings.cpp  Settings.h
src/node_addon/: CMakeLists.txt  main.cpp
src/services/: FileSizeService.cpp  FileSizeService.h  StorageService.cpp  StorageService.h
src/services/storage/: BinaryStorageService.cpp  BinaryStorageService.h  LevelDbStorageService.cpp  LevelDbStorageService.h  SQLiteStorageService.cpp  SQLiteStorageService.h  StorageService.h
src/workers/: StorageWorker.cpp  StorageWorker.h  Worker.cpp  Worker.h  WorkerManager.cpp  WorkerManager.h
tests/: CMakeLists.txt  FileSizeServiceTest.cpp  WorkQueueTest.cpp  gtest.cpp  main.cpp
tests/data/: WorkQueueTest.cpp
tests/factory/: FileSaverFactoryTest.cpp
tests/integration_tests/: MockRootPath.cpp
tests/models/: FileEntryTest.cpp  FileSizePairTest.cpp
tests/services/: BackgroundWorkerTest.cpp  StorageServiceTest.cpp
tests/services/category/: FileCategoryService.cpp  FileCategoryService.h
tests/services/filesize/: InMemoryFileEntryStoreTest.cpp
tests/services/fileutils/: CompressionServiceTest.cpp
tests/services/settings/: SettingsServiceTest.cpp
tests/services/settings/__mocks__/: test.yaml
tests/services/stats/: MetricsReporterTest.cpp  StatsServiceTest.cpp
tests/services/storage/: LevelDbFactoryTest.cpp  LevelDbFileCategoryStoreTest.cpp  LevelDbStorageServiceTest.cpp  SQLiteStorageServiceTest.cpp
tests/simple_timer/: SimpleTimerTest.cpp
tests/storage/: LevelDbStorageServiceTest.cpp
tests/test_utils/: RandomRootGenerator.cpp  RandomRootGenerator.h  TestUtils.cpp  TestUtils.h
tests/workers/: WorkerTest.cpp
(+225 files in other folders)
